slide out panel fix
fixed horizontal scrollbar showing in each item in the slide out panel

--- a/styles.css
+++ b/styles.css
@@ -281,7 +281,7 @@ body {
     margin-left: 1px;
     border: 0px;
     background-color: transparent;
-    width: 100%;
+    width: 95%;
     text-align: left;
     outline: none;
     overflow: auto;
